<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="133dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_dinnernumber"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_dinnernumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:text="@string/et_dinnernumber"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_dinneprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:text="@string/et_dinnerprice"
        app:layout_constraintStart_toEndOf="@+id/lbl_dinnerprice"
        app:layout_constraintTop_toBottomOf="@+id/et_dinnernumber" />

    <TextView
        android:id="@+id/lbl_dinnerprice"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Price of Dinner: "
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/lbl_tippercentage"
        android:layout_width="138dp"
        android:layout_height="23dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_tippercentage"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dinnerprice" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="8dp"
        android:layout_height="26dp"
        android:layout_marginTop="92dp"
        android:text="$"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/et_dinneprice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="341dp"
        android:layout_height="228dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:text="@string/tv_result"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:text="@string/btn_calculate"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_tippercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:text="@string/et_tippercentage"
        app:layout_constraintStart_toEndOf="@+id/lbl_tippercentage"
        app:layout_constraintTop_toBottomOf="@+id/et_dinneprice" />

</android.support.constraint.ConstraintLayout>